[tool.poetry]
name = "eivlcraft"
version = "0.1.0"
description = ""
authors = ["Eivind Teig <eivind.teig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "^1.5.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
